mongodb-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  selector:
    matchLabels:
      app: mongo-express
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: 1000m
            memory: 1Gi
          limits: 
            cpu: 1000m
            memory: 1Gi
---
kind: Service
apiVersion: v1
metadata:
  name:  mongo-express-service
spec:
  selector:
    app:  mongo-express
  type:  LoadBalancer
  ports:
  - name:  default
    port:  8081
    targetPort:  8081
    protocol: TCP
