nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app.kubernetes.io/name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.27
          # command:
          #   - /bin/sh
          #   - -c
          #   - while true; do echo "$(date) My preferred sport is $(cat /etc/config/sport)";
          #     sleep 10; done;
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
                cpu: 250m
                memory: 128Mi
          # volumeMounts:
          #   - name: config-volume
          #     mountPath: /etc/config
      # volumes:
      #   - name: config-volume
      #     configMap:
      #       name: sport

---

kind: Service
apiVersion: v1
metadata:
  name:  nginx-service
spec:
  selector:
    app.kubernetes.io/name:  nginx
  ports:
  - protocol:  TCP
    port:  80
    targetPort:  8080
